fixed chevron alignment

--- a/fastfax/assets/css/style.css
+++ b/fastfax/assets/css/style.css
@@ -1242,7 +1242,7 @@ section {
 
 .faq .faq-list .icon-show, .faq .faq-list .icon-close {
   font-size: 24px;
-  position: absolute;
+  position: relative;
   right: 0;
   top: 0;
 }
